# dwm

./: Dockerfile
scripts/: serialread.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c  ss_init_main.c
src/app/config/: sdk_config.h
src/cmake/: arm-gcc-toolchain.cmake
src/deca_driver/: CMakeLists.txt
src/nrf5_sdk/: CMakeLists.txt
src/nrf5_sdk/components/ble/ble_dtm/: ble_dtm_hw.h
src/nrf5_sdk/components/boards/: boards.h
src/nrf5_sdk/components/device/: nrf.h
src/nrf5_sdk/components/drivers_nrf/spi_master/: nrf_drv_spi.h
src/nrf5_sdk/components/libraries/uart/: app_uart.h
src/nrf5_sdk/config/: sdk_config_.h  user_config.h
tools/: build  build-container  flash  reset  run
